Added Seo tag index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abhishek's Website</title>
+    
+ <!-- SEO Meta Tags -->
+    <meta name="description" content="Welcome to Abhishek's portfolio. Explore my work and skills in iOS App development." />
+    <meta name="keywords" content="Abhishek, portfolio, iOS, web development, design, coding" />
+    <meta name="author" content="Abhishek" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="Abhishek's Portfolio" />
+    <meta property="og:description" content="Explore Abhishek's work and skills in iOS App development." />
+    <meta property="og:image" content="path/to/your/image.jpg" />
+    <meta property="og:url" content="https://www.yourportfolio.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Abhishek's Portfolio" />
+    <meta name="twitter:description" content="Explore Abhishek's work and skills in iOS App development." />
+    <meta name="twitter:image" content="path/to/your/image.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.yourportfolio.com" />
+
+
+    
   </head>
   <body>
     <div id="app"></div>
